# Advanced

./: .gitignore  README.md
Interfaces/AI_one/: Cargo.toml
Interfaces/AI_one/src/: main.rs
Interfaces/GUI_one/: Cargo.toml
Interfaces/GUI_one/src/: ai.rs  main.rs  pene.rs  temp.rs  temp2.rs  utils.rs
Interfaces/interface_one/src/: main.rs
Tools/: README.md
Tools/AntitRUST_nearest_tp/: Cargo.toml
Tools/AntitRUST_nearest_tp/src/: lib.rs  nearest_tp.rs
Tools/AntitRUST_tiles_stats/: Cargo.toml  README.md
Tools/AntitRUST_tiles_stats/src/: tiles_stats.rs
Tools/nearest_tp/: Cargo.toml  README.md
Tools/nearest_tp/src/: nearest_tp.rs
Tools/tiles_count/src/: lib.rs  tiles_count.rs
Tools/tiles_stats/: Cargo.toml
Tools/tiles_stats/src/: tiles_stats.rs
advanced/: Cargo.toml
tiles_count/src/: tiles_count.rs
