[package]
name = "GUI_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
rand = "0.8.5"


op_map = {registry = "kellnr"}
bessie = { registry = "kellnr"}


arrusticini_destroy_zone = {registry = "kellnr"}
ohcrab_weather = {registry = "kellnr"}
oxagaudiotool = {registry = "kellnr"}
robotics_lib = { registry = "kellnr"}
ghost_amazeing_island = {registry = "kellnr"}
rust_and_furious_dynamo = {registry = "kellnr"}
crab_rave_explorer = {registry = "kellnr"}
nearest_tp = {registry = "kellnr"}
